// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStep is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiStep testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      class="euiStepNumber euiStep__circle"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 1
      </p>
      <p
        aria-hidden="true"
      >
        1
      </p>
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props headingElement 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      class="euiStepNumber euiStep__circle"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 1
      </p>
      <p
        aria-hidden="true"
      >
        1
      </p>
    </div>
    <h3
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </h3>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status complete is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      class="euiStepNumber euiStepNumber--complete euiStep__circle"
    >
      <span
        aria-label="Step 1 is complete"
        class="euiStepNumber__icon"
        data-euiicon-type="check"
      />
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status danger is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      class="euiStepNumber euiStepNumber--danger euiStep__circle"
    >
      <span
        aria-label="Step 1 has errors"
        class="euiStepNumber__icon"
        data-euiicon-type="cross"
      />
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status disabled is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      class="euiStepNumber euiStepNumber--disabled euiStep__circle"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 1 is disabled
      </p>
      <p
        aria-hidden="true"
      >
        1
      </p>
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status incomplete is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      class="euiStepNumber euiStepNumber--incomplete euiStepNumber-isHollow euiStep__circle"
    />
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props status warning is rendered 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      class="euiStepNumber euiStepNumber--warning euiStep__circle"
    >
      <span
        aria-label="Step 1 has warnings"
        class="euiStepNumber__icon"
        data-euiicon-type="alert"
      />
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props step 1`] = `
<div
  class="euiStep"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      class="euiStepNumber euiStep__circle"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 5
      </p>
      <p
        aria-hidden="true"
      >
        5
      </p>
    </div>
    <p
      class="euiTitle euiTitle--small euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;

exports[`EuiStep props titleSize 1`] = `
<div
  class="euiStep euiStep--small"
>
  <div
    class="euiStep__titleWrapper"
  >
    <div
      class="euiStepNumber euiStep__circle euiStepNumber--small"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 1
      </p>
      <p
        aria-hidden="true"
      >
        1
      </p>
    </div>
    <p
      class="euiTitle euiTitle--xsmall euiStep__title"
    >
      First step
    </p>
  </div>
  <div
    class="euiStep__content"
  >
    <p>
      Do this
    </p>
  </div>
</div>
`;
